--- a/requirements.txt
+++ b/requirements.txt
@@ -1,95 +1,5 @@
-﻿aiohappyeyeballs==2.6.1
-aiohttp==3.13.2
-aiosignal==1.4.0
-alibabacloud-nls-python-sdk==1.0.2
-aliyun-python-sdk-core==2.16.0
-aliyun-python-sdk-kms==2.16.5
-annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
-anyio==4.11.0
-attrs==24.3.0
-baize==0.23.1
-blinker==1.9.0
-cachetools==6.2.2
-certifi==2025.11.12
-cffi==2.0.0
-charset-normalizer==3.4.4
-click==8.3.1
-colorama==0.4.6
-contourpy==1.3.3
-crcmod==1.7
-cryptography==46.0.3
-cycler==0.12.1
-dashscope==1.25.2
-filelock==3.15.4
-Flask==3.1.2
-fonttools==4.60.1
-frozenlist==1.8.0
-fsspec==2024.6.1
-gunicorn==23.0.0
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-hydra-core==1.3.2
-idna==3.11
-itsdangerous==2.2.0
-Jinja2==3.1.4
-jmespath==0.10.0
-kiwisolver==1.4.9
-kui==1.14.0
-lightning==2.5.6
-lightning-utilities==0.15.2
-loguru==0.7.3
-loralib==0.1.2
-MarkupSafe==2.1.5
-matplotlib==3.10.7
-mpmath==1.3.0
-multidict==6.7.0
-networkx==3.3
-numpy==2.3.5
-omegaconf==2.3.0
-oss2==2.19.1
-outcome==1.3.0.post0
-packaging==25.0
-pillow==12.0.0
-propcache==0.4.1
-PyAudio==0.2.14
-pycparser==2.23
-pycryptodome==3.23.0
-pydantic==2.12.4
-pydantic_core==2.41.5
-PyJWT==2.8.0
-PyMonCtl==0.92
-pyparsing==3.2.5
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-pytorch-lightning==2.5.6
-PyWinBox==0.7
-PyWinCtl==0.4.1
-PyYAML==6.0.3
-regex==2025.11.3
-requests==2.32.5
-selenium==4.27.1
-setuptools==73.0.1
-six==1.17.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-sympy==1.13.2
-tiktoken==0.12.0
-torch==2.4.0+cu124
-torchaudio==2.4.0+cu124
-torchmetrics==1.8.2
-torchvision==0.19.0+cu124
-tqdm==4.67.1
-trio==0.28.0
-trio-websocket==0.11.1
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-urllib3==2.5.0
-websocket-client==1.8.0
-Werkzeug==3.1.3
-win32_setctime==1.2.0
-wsproto==1.2.0
-yarl==1.22.0
-zhipuai==2.1.5.20250825
-
+Flask
+requests
+zhipuai
+python-dotenv
+gunicorn
